--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
+/* Global css */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* For Desktop */
+.headerTitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff;
+  border-bottom: 1px solid #b0b0b0;
+  font-size: 1.75rem;
+  font-weight: 500;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #ffffff;
+  color: #000;
+  padding: 0;
+  height: 3.125rem;
+  z-index: 1; 
+}
+
+/* For tablets */
+@media (max-width: 64rem) {
+  .headerTitle {
+    font-size:  1.25rem;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+/* For mobile */
+@media (max-width: 48rem) {
+  .headerTitle {
+    font-size:  1rem; 
   }
 }
